# zumpy

./: .gitignore  README.md  meson.build  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
.zed/: settings.json
src/c_src/: _binding.c  core.c  core.h  meson.build
src/zumpy/: __init__.py  _binding.pyi
tests/: test_zumpy.py
